Documentation Utils complete